--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,12 @@ server.error.include-binding-errors=always
 spring.devtools.livereload.enabled=true
 
 # JPA datasource
-spring.datasource.url=jdbc:postgresql://localhost:5432/hackathon
-spring.datasource.username=hackathon
-spring.datasource.password=password
+#spring.datasource.url=jdbc:postgresql://localhost:5432/hackathon
+#spring.datasource.username=hackathon
+#spring.datasource.password=password
+spring.datasource.url=jdbc:postgresql://db-team4-unilabs-1-instance-1.cldggbk9quh2.eu-west-1.rds.amazonaws.com/hackathon
+spring.datasource.username=postgresteam4
+spring.datasource.password=Teamgrupo4!
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
